<resources>
    <string name="app_name">Photo_vocalizer</string>
    <string name="pick_gallery">Wybierz z galerii</string>
    <string name="classification_result">Wynik klasyfikacji</string>
    <string name="classified_as">Sklasyfikowano jako:</string>
    <string name="take_photo">Zrób zdjęcie</string>
    <string name="classify">Sklasyfikuj obraz</string>
    <string name="start_listening">Zacznij słuchać</string>
</resources>