<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/photoButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_above="@id/galleryButton"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="takePhoto"
        android:text="@string/take_photo"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/galleryButton"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/classified"
        app:layout_constraintTop_toBottomOf="@+id/classified" />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="pickFromGallery"
        android:text="@string/pick_gallery"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/classifyButton"
        app:layout_constraintEnd_toEndOf="@+id/photoButton"
        app:layout_constraintStart_toStartOf="@+id/photoButton"
        app:layout_constraintTop_toBottomOf="@+id/photoButton" />

    <Button
        android:id="@+id/classifyButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="40dp"
        android:onClick="classifyImage"
        android:text="@string/classify"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/galleryButton"
        app:layout_constraintStart_toStartOf="@+id/galleryButton"
        app:layout_constraintTop_toBottomOf="@+id/galleryButton" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="320sp"
        android:layout_height="320sp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/classified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/classified_as"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/classified"
        android:layout_marginStart="10dp"
        android:hint="@string/classification_result"
        android:text=""
        android:textColor="#C30000"
        android:textColorHint="#78909C"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/classified"
        app:layout_constraintStart_toEndOf="@+id/classified"
        app:layout_constraintTop_toTopOf="@+id/classified" />

<!--    <androidx.constraintlayout.widget.ReactiveGuide-->
<!--        android:id="@+id/fold"-->
<!--        app:reactiveGuide_valueId="@id/fold"-->
<!--        android:orientation="horizontal"  android:layout_height="60dp"/>-->


</androidx.constraintlayout.widget.ConstraintLayout>